# python-monorepo

./: .gitattributes  .release-please-manifest.json  CHANGELOG.md  pyproject.toml  release-please-config-pvt.json  release-please-config.json  relese-please-config1.json
.github/workflows/: release-management  release-please-pvt.yml  release-please.yml  release-please1.yml  relese-please-pvt.yml  update-subtrees.yml
package1/service1/: main.py
source/code/RepoB/: CHANGELOG.md
source/code/service-b/: CHANGELOG.md  release-please-config.json
source/code/service-b/src/code/: main.py
source/code/service-b/src/code/package2/service2/: main.py
src/code/: main.py
src/code/package1/: CHANGELOG.md  pyproject.toml  release_test.py
src/code/package1/service1/: main.py
src/code/package2/: CHANGELOG.md  pyproject.toml
