[tool.poetry]
name = "service2"
version = "0.2.0"
description = ""
authors = ["Kasper Primdal Lauritzen <git@kplauritzen.dk>"]

[tool.poetry.dependencies]
python = "^3.10"
common = { path = "../", develop = true }


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
